[package]
name = "aisdk"
version = "0.1.0"
edition = "2021"
description = "One entry point for Claude Code (claude) and Grok Build (grok) — using your subscriptions, not metered API."
license = "MIT"

[[bin]]
name = "aisdk"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
